Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74699

[REG 5.12.0->5.12.1]: QMessageBox done(int) slot is not called

    XMLWordPrintable

Details

    Description

      For some reason QMessageBox::done(int) (from QDialog) slot is not called after dialog is closed with button press. This works at least in Qt 5.9.7 and still in Qt 5.11.x but not in Qt 5.12.2

      Please find the attached example project to demonstrate this issue

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vitaly.fanaskov Vitaly Fanaskov
            pekarjal Pekka Karjalainen
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes