BUG: Fix ctkMessageBox don't show again feature in Qt-5.12

QMessageBox::done(int) is not called after Qt-5.12 (see https://bugreports.qt.io/browse/QTBUG-74699), so use onFinished(int) signal instead.

This new mechanism would probably work with earlier Qt versions, too, but we keep using the old way for earlier Qt versions to avoid any potential regressions.